Add support for multichannel playback to OpenSLES output.

Ports the code from AOSP for detecting channel layouts given a
channel count. No idea if it works though since I'm not sure how
to setup a multichannel android device.

Notably this also changes the mono layout from using the center
channel to using the left channel mask per notes in the ported
code.

Multichannel is only supported on Lollipop+ devices since OpenSLES
does not configure successfully on any KitKat device I've tried.

BUG=607003
TEST=multichannel test clip.

Review-Url: https://codereview.chromium.org/1921963004
Cr-Commit-Position: refs/heads/master@{#391095}

Former-commit-id: 48c1c49bc3646cf90a59ad90260a43ff23001bf1